--- a/index.html
+++ b/index.html
@@ -5,18 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/x-mathjax-config">
-		MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
+	<script id="MathJax-script" async
+		src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 	</script>
-	<script type="text/x-mathjax-config">
-		MathJax.Hub.Config({
-			tex2jax: {
-				inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-				processEscapes: true
-			}
-		});
-	</script>
-	<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 	<title>Home - Patrick M. Lenggenhager</title>
 
@@ -60,13 +51,18 @@
 <div class="col-md-3 col-sm-4">
 	<div class="row mb-4">
 		<div class="box mx-auto">
-	<img class="img-fluid mx-auto d-block" src="/assets/media/photo.jpg" style="max-width: 255px; width: 100%;" alt="photo">
+	<!--<img class="img-fluid mx-auto d-block" src="/assets/media/photo.jpg" style="max-width: 255px; width: 100%;" alt="photo">-->
+	<picture class="img-fluid mx-auto d-block">
+		<source srcset="/assets/media/photo.webp" type='image/webp'>
+		<source srcset="/assets/media/photo.jp2" type='image/jp2'>
+		<img srcset="/assets/media/photo.jpg" alt='photo' style="max-width: 255px; width: 100%;">
+	</picture>
 </div>
 
 	</div>
 	<div class="row mb-4">
 		<div class="card mx-auto" style="width: 100%; max-width: 255px;">
-	<div class="card-header">Quick links</div>
+	<h5 class="card-header">Quick links</h5>
 	<div class="list-group list-group-flush">
 		
 			<a href="https://arxiv.org/a/lenggenhager_p_1.html" target="_blank" class="list-group-item list-group-item-action">arXiv</a>
@@ -141,13 +137,18 @@
 	<div class="row mb-3">
 		<div class="col-6 my-auto">
 			<div class="box mx-auto">
-	<img class="img-fluid mx-auto d-block" src="/assets/media/photo.jpg" style="max-width: 255px; width: 100%;" alt="photo">
+	<!--<img class="img-fluid mx-auto d-block" src="/assets/media/photo.jpg" style="max-width: 255px; width: 100%;" alt="photo">-->
+	<picture class="img-fluid mx-auto d-block">
+		<source srcset="/assets/media/photo.webp" type='image/webp'>
+		<source srcset="/assets/media/photo.jp2" type='image/jp2'>
+		<img srcset="/assets/media/photo.jpg" alt='photo' style="max-width: 255px; width: 100%;">
+	</picture>
 </div>
 
 		</div>
 		<div class="col-6 my-auto">
 			<div class="card mx-auto" style="width: 100%; max-width: 255px;">
-	<div class="card-header">Quick links</div>
+	<h5 class="card-header">Quick links</h5>
 	<div class="list-group list-group-flush">
 		
 			<a href="https://arxiv.org/a/lenggenhager_p_1.html" target="_blank" class="list-group-item list-group-item-action">arXiv</a>
@@ -218,7 +219,12 @@
 <div class="d-sm-none">
 	<div class="row mb-3">
 		<div class="box mx-auto">
-	<img class="img-fluid mx-auto d-block" src="/assets/media/photo.jpg" style="max-width: 255px; width: 100%;" alt="photo">
+	<!--<img class="img-fluid mx-auto d-block" src="/assets/media/photo.jpg" style="max-width: 255px; width: 100%;" alt="photo">-->
+	<picture class="img-fluid mx-auto d-block">
+		<source srcset="/assets/media/photo.webp" type='image/webp'>
+		<source srcset="/assets/media/photo.jp2" type='image/jp2'>
+		<img srcset="/assets/media/photo.jpg" alt='photo' style="max-width: 255px; width: 100%;">
+	</picture>
 </div>
 
 	</div>
@@ -236,7 +242,7 @@
 	</div>
 	<div class="row mb-3">
 		<div class="card mx-auto" style="width: 100%; max-width: 255px;">
-	<div class="card-header">Quick links</div>
+	<h5 class="card-header">Quick links</h5>
 	<div class="list-group list-group-flush">
 		
 			<a href="https://arxiv.org/a/lenggenhager_p_1.html" target="_blank" class="list-group-item list-group-item-action">arXiv</a>
