--- a/publications.html
+++ b/publications.html
@@ -5,18 +5,9 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<script type="text/x-mathjax-config">
-		MathJax.Hub.Config({ TeX: { equationNumbers: { autoNumber: "all" } } });
+	<script id="MathJax-script" async
+		src="https://cdn.jsdelivr.net/npm/mathjax@3.0.0/es5/tex-mml-chtml.js">
 	</script>
-	<script type="text/x-mathjax-config">
-		MathJax.Hub.Config({
-			tex2jax: {
-				inlineMath: [ ['$','$'], ["\\(","\\)"] ],
-				processEscapes: true
-			}
-		});
-	</script>
-	<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
 	<title>Publications - Patrick M. Lenggenhager</title>
 
