Update publications, research interests and contact page.

--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
 		I'm a PhD student of Tom&aacute;&scaron; Bzdu&scaron;ek and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture as well as resulting transport properties and the interplay of the topology with interactions.
+		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
+		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. See <a href="resint.html">research interests</a> and  <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -172,7 +173,8 @@
 		I'm a PhD student of Tom&aacute;&scaron; Bzdu&scaron;ek and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture as well as resulting transport properties and the interplay of the topology with interactions.
+		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
+		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. See <a href="resint.html">research interests</a> and  <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -238,7 +240,8 @@
 		I'm a PhD student of Tom&aacute;&scaron; Bzdu&scaron;ek and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture as well as resulting transport properties and the interplay of the topology with interactions.
+		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
+		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. See <a href="resint.html">research interests</a> and  <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -303,7 +306,7 @@
 			</div>
 		<footer class="sticky-bottom" style="background-color: #121254;">
 	<div class="container">
-		<p class="m-0 text-center text-white">Copyright &copy; 2020</p>
+		<p class="m-0 text-center text-white">Copyright &copy; 2021</p>
 	</div>
 </footer>
 
