--- a/resint.html
+++ b/resint.html
@@ -55,13 +55,17 @@
 <p>Currently, my main research interests revolve around <strong>topological band theory</strong> and <strong>materials</strong>.
 I am studying various properties of topological bandstructures, such as momentum space degeneracies (<em>band nodes</em>), <em>topological invariants</em> and the relation of all of them to symmetries.
 In particular, I am interested in a multi-band perspective on the above topics.
-My work encompasses both working with simple toy models illustrating and/or demonstrating novel topological phenomena as well as simulating/modeling real materials to study possibly observable effects such as <em>transport signatures</em>.
-Additionally, I am also interested in the interplay of topology with interactions.
+My work encompasses both working with simple toy models illustrating and/or demonstrating novel topological phenomena as well as simulating/modeling real materials to study possibly observable effects such as <em>transport signatures</em>.</p>
+
+<p>Recently, I have been working on <em>triple points</em>, which are degeneracies of three bands in momentum space.
+We were able to classify them in the absence of spin (which applies to systems where spin-orbit interactions are negligible but also to many other systems such as photons, phonons, magnons including may metamaterials) and find a <strong>universal higher-order bulk-boundary correspondence</strong>.
 For more information, check out my <a href="publications.html">publications</a>.</p>
 
-<p>Besides this main part of my research I am also interested in other topics, on some of which I have previously worked:</p>
+<p>Additionally, I am also interested in the interplay of non-Abelian topology with interactions.
+Besides this main part of my research I am also interested in other topics, on some of which I have previously worked while others might lead to future projects:</p>
 
 <ul>
+  <li>Topological systems in curved spaces</li>
   <li>Transport and non-equilibrium physics / Floquet systems (Master thesis)</li>
   <li>Information theory and statistical physics (see <a href="publications.html">publications</a>)</li>
   <li>Field theoretical methods in condensed matter theory</li>
@@ -72,7 +76,7 @@ For more information, check out my <a href="publications.html">publications</a>.
 			</div>
 		<footer class="sticky-bottom" style="background-color: #121254;">
 	<div class="container">
-		<p class="m-0 text-center text-white">Copyright &copy; 2020</p>
+		<p class="m-0 text-center text-white">Copyright &copy; 2021</p>
 	</div>
 </footer>
 
