Update teaching and add link to Tomas' website.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 		<div class="container">
 	<h3 class="my-2">About me</h3>
 	<p>
-		I'm a PhD student of Tom&aacute;&scaron; Bzdu&scaron;ek and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
+		I'm a PhD student of <a href="https://www.tomasbzdusek.com" target="_blank">Tom&aacute;&scaron; Bzdu&scaron;ek</a> and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
 		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
@@ -119,7 +119,8 @@
 	<em>Tutorials</em>
 	<p>
 		2018: Theory of Heat (ETH Zurich)<br>
-		2020: Solid State Theory (ETH Zurich)
+		2020: Solid State Theory (ETH Zurich)<br>
+		2021: Mechanics of Continua (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -170,7 +171,7 @@
 		<div class="container">
 	<h3 class="my-2">About me</h3>
 	<p>
-		I'm a PhD student of Tom&aacute;&scaron; Bzdu&scaron;ek and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
+		I'm a PhD student of <a href="https://www.tomasbzdusek.com" target="_blank">Tom&aacute;&scaron; Bzdu&scaron;ek</a> and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
 		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
@@ -205,7 +206,8 @@
 	<em>Tutorials</em>
 	<p>
 		2018: Theory of Heat (ETH Zurich)<br>
-		2020: Solid State Theory (ETH Zurich)
+		2020: Solid State Theory (ETH Zurich)<br>
+		2021: Mechanics of Continua (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -237,7 +239,7 @@
 		<div class="container">
 	<h3 class="my-2">About me</h3>
 	<p>
-		I'm a PhD student of Tom&aacute;&scaron; Bzdu&scaron;ek and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
+		I'm a PhD student of <a href="https://www.tomasbzdusek.com" target="_blank">Tom&aacute;&scaron; Bzdu&scaron;ek</a> and Manfred Sigrist in the <a href="https://www.psi.ch/en/lsm/cmt-group" target="_blank">Condensed Matter Theory group</a> at the <a href="https://www.psi.ch/en" target="_blank">Paul Scherrer Institute</a> and <a href="https://ethz.ch/en.html" target="_blank">ETH Zurich</a> in Switzerland.
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
 		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
@@ -287,7 +289,8 @@
 	<em>Tutorials</em>
 	<p>
 		2018: Theory of Heat (ETH Zurich)<br>
-		2020: Solid State Theory (ETH Zurich)
+		2020: Solid State Theory (ETH Zurich)<br>
+		2021: Mechanics of Continua (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
