Update publication entries.

--- a/publications.html
+++ b/publications.html
@@ -73,10 +73,10 @@
 						<h6 class="card-subtitle mb-2">P. M. Lenggenhager, X. Liu, T. Neupert, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
 	<a href="https://arxiv.org/abs/2104.11254" target="_blank">
-		arXiv 
+		arXiv:2104.11254 
 	</a>
 	<div class="d-none d-sm-inline">
-		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Published</div> 22 Apr 2021
+		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Uploaded</div> 22 Apr 2021
 	</div>
 </h6>
 
@@ -96,10 +96,10 @@ We illustrate the derived phenomena on material examples using first-principles 
 				<h6 class="card-subtitle mb-2">P. M. Lenggenhager, X. Liu, T. Neupert, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
 	<a href="https://arxiv.org/abs/2104.11254" target="_blank">
-		arXiv 
+		arXiv:2104.11254 
 	</a>
 	<div class="d-none d-sm-inline">
-		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Published</div> 22 Apr 2021
+		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Uploaded</div> 22 Apr 2021
 	</div>
 </h6>
 
