--- a/resint.html
+++ b/resint.html
@@ -15,6 +15,7 @@
 	<title>Research Interests - Patrick M. Lenggenhager</title>
 
 	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/assets/academicons/css/academicons.min.css"/>
 </head>
 
 	<body>
