Improve alignment of thumbnails in mobile view.

--- a/publications.html
+++ b/publications.html
@@ -65,12 +65,12 @@
 			</h5>
 			<div class="d-md-none d-lg-block">
 			<div class="row no-gutters">
-				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center">
+				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center" style="margin-left:10px; margin-right:10px;">
 					<a class="mx-auto my-auto d-block" href="https://arxiv.org/pdf/2109.01148.pdf" target="_blank"><img class="img-fluid mx-auto my-auto d-block" src="/assets/media/thumbnails/HyperbolicDrum.jpg" alt="" style="width: 100%;"></a>
 
 				</div>
 				<div class="col">					
-					<div class="card-body">
+					<div class="card-body" style="padding-left:0px">
 						<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, A. Stegmaier, L. K. Upreti, T. Hofmann, T. Helbig, A. Vollhardt, M. Greiter, C. H. Lee, S. Imhof, H. Brand, T. Kießling, I. Boettcher, T. Neupert, R. Thomale, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, A. Stegmaier, ..., T. Neupert, R. Thomale, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
@@ -128,12 +128,12 @@
 			</h5>
 			<div class="d-md-none d-lg-block">
 			<div class="row no-gutters">
-				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center">
+				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center" style="margin-left:10px; margin-right:10px;">
 					<a class="mx-auto my-auto d-block" href="https://arxiv.org/pdf/2104.11254.pdf" target="_blank"><img class="img-fluid mx-auto my-auto d-block" src="/assets/media/thumbnails/BulkHingeTPs.jpg" alt="" style="width: 100%;"></a>
 
 				</div>
 				<div class="col">					
-					<div class="card-body">
+					<div class="card-body" style="padding-left:0px">
 						<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, X. Liu, T. Neupert, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, X. Liu, T. Neupert, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
@@ -197,12 +197,12 @@ We illustrate the derived phenomena on material examples using first-principles 
 			</h5>
 			<div class="d-md-none d-lg-block">
 			<div class="row no-gutters">
-				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center">
+				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center" style="margin-left:10px; margin-right:10px;">
 					<a class="mx-auto my-auto d-block" href="https://www.dora.lib4ri.ch/psi/islandora/object/psi%3A37048/datastream/PDF/Lenggenhager-2021-From_triple-point_materials_to_multiband-%28published_version%29.pdf" target="_blank"><img class="img-fluid mx-auto my-auto d-block" src="/assets/media/thumbnails/NodalLinksInTPMs.jpg" alt="" style="width: 100%;"></a>
 
 				</div>
 				<div class="col">					
-					<div class="card-body">
+					<div class="card-body" style="padding-left:0px">
 						<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, X. Liu, S. S. Tsirkin, T. Neupert, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, X. Liu, S. S. Tsirkin, T. Neupert, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
@@ -264,12 +264,12 @@ We propose material candidates and study the consequences of this phenomenon.</p
 			</h5>
 			<div class="d-md-none d-lg-block">
 			<div class="row no-gutters">
-				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center">
+				<div class="col-lg-3 col-sm-3 col-3 d-flex justify-content-center" style="margin-left:10px; margin-right:10px;">
 					<a class="mx-auto my-auto d-block" href="https://journals.aps.org/prx/pdf/10.1103/PhysRevX.10.011037" target="_blank"><img class="img-fluid mx-auto my-auto d-block" src="/assets/media/thumbnails/OptimalRG.jpg" alt="" style="width: 100%;"></a>
 
 				</div>
 				<div class="col">					
-					<div class="card-body">
+					<div class="card-body" style="padding-left:0px">
 						<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, D. E. Gökmen, Z. Ringel, S. D. Huber, and M. Koch-Janusz</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, D. E. Gökmen, Z. Ringel, S. D. Huber, and M. Koch-Janusz</h6>
 <h6 class="card-subtitle mb-2">
