Update teaching activities.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,8 @@
 	<p>
 		2018: Theory of Heat (ETH Zurich)<br>
 		2020: Solid State Theory (ETH Zurich)<br>
-		2021: Mechanics of Continua (ETH Zurich)
+		2021: Mechanics of Continua (ETH Zurich)<br>
+                2022: Solid State Theory (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -296,7 +297,8 @@
 	<p>
 		2018: Theory of Heat (ETH Zurich)<br>
 		2020: Solid State Theory (ETH Zurich)<br>
-		2021: Mechanics of Continua (ETH Zurich)
+		2021: Mechanics of Continua (ETH Zurich)<br>
+                2022: Solid State Theory (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
@@ -421,7 +423,8 @@
 	<p>
 		2018: Theory of Heat (ETH Zurich)<br>
 		2020: Solid State Theory (ETH Zurich)<br>
-		2021: Mechanics of Continua (ETH Zurich)
+		2021: Mechanics of Continua (ETH Zurich)<br>
+                2022: Solid State Theory (ETH Zurich)
 	</p>
 
 	<h3 class="my-2">Outreach</h3>
