Update general information and add post about paper on hyperbolic TIs.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
 		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. Recently, I have also studied systems defined on hyperbolic lattices and I have become interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -151,13 +151,10 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2016 - 2019</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">MSc in Physics, ETH Zurich, Switzerland</div></dd>
+			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2015</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc in Physics, ETH Zurich, Switzerland</div></dd>
-		
-			<dt class="col-lg-2 col-sm-3">2012 - present</dt>
+			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
 		
 	</dl>
@@ -265,7 +262,7 @@
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
 		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. Recently, I have also studied systems defined on hyperbolic lattices and I have become interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -281,13 +278,10 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2016 - 2019</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">MSc in Physics, ETH Zurich, Switzerland</div></dd>
+			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2015</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc in Physics, ETH Zurich, Switzerland</div></dd>
-		
-			<dt class="col-lg-2 col-sm-3">2012 - present</dt>
+			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
 		
 	</dl>
@@ -391,7 +385,7 @@
 		However, I spend a large part of my time in the <a href="https://www.physik.uzh.ch/en/groups/neupert.html" target="_blank">Condensed Matter Theory group at the University of Zurich</a>, where I'm an associated PhD student.
 		In my research, I study so called topological materials, which are materials that manifest phases of matter with topological properties.
 		Topological phases are characterized by having boundaries that behave in a way that would not be possible if the boundary was simply a separate system of lower dimension - this behavior is called an anomaly.
-		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
+		I'm interested in various aspects including the characterization of the band structure in a multi-band picture, nodal phases, higher-order topology as well as resulting boundary and transport properties and the interplay of the topology with interactions. Recently, I have also studied systems defined on hyperbolic lattices and I have become interested in applications of quantum information theory to condensed matter systems. See <a href="resint.html">research interests</a>, <a href="projects.html">projects</a> and <a href="publications.html">publications</a> for more details.
 	</p>
 </div>
 
@@ -407,13 +401,10 @@
 			<dt class="col-lg-2 col-sm-3">2018 - 2019</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Master Thesis in Condensed Matter Theory, Institute for Quantum Information and Matter, Caltech, CA USA</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2016 - 2019</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">MSc in Physics, ETH Zurich, Switzerland</div></dd>
+			<dt class="col-lg-2 col-sm-3">2012 - 2019</dt>
+			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc and MSc in Physics, ETH Zurich, Switzerland</div></dd>
 		
-			<dt class="col-lg-2 col-sm-3">2012 - 2015</dt>
-			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">BSc in Physics, ETH Zurich, Switzerland</div></dd>
-		
-			<dt class="col-lg-2 col-sm-3">2012 - present</dt>
+			<dt class="col-lg-2 col-sm-3">2012 - 2021</dt>
 			<dd class="col-lg-10 col-sm-9"><div style="margin-left: 0.5rem;">Member of the Swiss Study Foundation</div></dd>
 		
 	</dl>
