Update hyperbolic drum post.

--- a/projects.html
+++ b/projects.html
@@ -76,7 +76,9 @@
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, A. Stegmaier, ..., T. Neupert, R. Thomale, and T. Bzdušek</h6>
 
 						  <div class="d-none d-lg-block">
-							  <p><p>In this project, we study artificial lattices that can be interpreted as tilings of a plane with constant negative curvature. On these lattices one can define tight-binding models of different degrees of complexity. Starting with a simple nearest-neighbour hopping model (with equal and real hopping amplitudes), we demonstrate that such lattices can be realized in electric circuits and that signatures of the negative curvature can be experimentally obtained. Next, we show theoretically that topological models analogous to the Haldane and the Kane-Mele model can be defined on hyperbolic lattices and we study bulk invariants and the bulk-boundary correspondence.</p>
+							  <p><p>Curved spaces are usually associated with high-energy physics and cosmology. However, the possibility of tabletop experiments emulating such phenomena and the interest in synthetic matter in curved spaces have elevated curved spaces to relevance in condensed matter physics as well.
+Spaces with negative curvature are particularly difficult to realize experimentally. One way to achieve it, is by discretizing the space and implementing the resulting lattice.
+In this project, we study various aspects of such hyperbolic lattices, both experimentally and theoretically.</p>
 
 </p>
 						  </div>
@@ -91,7 +93,9 @@
 				  <img class="d-none d-md-block float-left mr-2" width="35%" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg">
           <img class="d-block d-md-none float-left mr-2" width="45%" src="/assets/media/thumbnails/project_HyperbolicLattices.jpg">
           <p class="card-text">
-					  <p>In this project, we study artificial lattices that can be interpreted as tilings of a plane with constant negative curvature. On these lattices one can define tight-binding models of different degrees of complexity. Starting with a simple nearest-neighbour hopping model (with equal and real hopping amplitudes), we demonstrate that such lattices can be realized in electric circuits and that signatures of the negative curvature can be experimentally obtained. Next, we show theoretically that topological models analogous to the Haldane and the Kane-Mele model can be defined on hyperbolic lattices and we study bulk invariants and the bulk-boundary correspondence.</p>
+					  <p>Curved spaces are usually associated with high-energy physics and cosmology. However, the possibility of tabletop experiments emulating such phenomena and the interest in synthetic matter in curved spaces have elevated curved spaces to relevance in condensed matter physics as well.
+Spaces with negative curvature are particularly difficult to realize experimentally. One way to achieve it, is by discretizing the space and implementing the resulting lattice.
+In this project, we study various aspects of such hyperbolic lattices, both experimentally and theoretically.</p>
 
 
 				  </p>
