Update copyright notice and add favicon.

--- a/projects.html
+++ b/projects.html
@@ -16,6 +16,7 @@
 
 	<link rel="stylesheet" href="/css/style.css">
 	<link rel="stylesheet" href="/assets/academicons/css/academicons.min.css"/>
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
 	<body>
@@ -146,7 +147,7 @@ In this project, we study various aspects of such hyperbolic lattices, both expe
 			</div>
 		<footer class="sticky-bottom" style="background-color: #121254;">
 	<div class="container">
-		<p class="m-0 text-center text-white">Copyright &copy; 2022</p>
+		<p class="m-0 copyright">Copyright &copy; 2022 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
 	</div>
 </footer>
 
