Fix style problem.

--- a/publications.html
+++ b/publications.html
@@ -469,7 +469,7 @@ Based on general proofs and detailed studies of arbitrary coarse-grainings of th
 			</div>
 		<footer class="sticky-bottom" style="background-color: #121254;">
 	<div class="container">
-		<p class="m-0 copyright">Copyright &copy; 2022 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
+		<p class="m-0 copyright-text">Copyright &copy; 2022 Patrick M. Lenggenhager. Designed by Patrick M. Lenggenhager.</p>
 	</div>
 </footer>
 
