Add DOI to new posts.

--- a/publications.html
+++ b/publications.html
@@ -80,11 +80,11 @@
 						<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, J. Maciejko, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, J. Maciejko, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
-	<a href="https://arxiv.org/abs/2305.04945" target="_blank">
+	<a href="https://doi.org/10.48550/arXiv.2305.04945" target="_blank">
 		arXiv:2305.04945 (2023)
 	</a>
 	<div class="d-none d-sm-inline">
-		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Uploaded</div> 10 May 2023
+		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Published</div> 10 May 2023
 	</div>
 </h6>
 
@@ -102,11 +102,11 @@ Here, we systematically construct non-Abelian Bloch states by generalizing to hy
 				<h6 class="card-subtitle mb-2 d-none d-md-block">P. M. Lenggenhager, J. Maciejko, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">P. M. Lenggenhager, J. Maciejko, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
-	<a href="https://arxiv.org/abs/2305.04945" target="_blank">
+	<a href="https://doi.org/10.48550/arXiv.2305.04945" target="_blank">
 		arXiv:2305.04945 (2023)
 	</a>
 	<div class="d-none d-sm-inline">
-		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Uploaded</div> 10 May 2023
+		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Published</div> 10 May 2023
 	</div>
 </h6>
 
@@ -145,11 +145,11 @@ Here, we systematically construct non-Abelian Bloch states by generalizing to hy
 						<h6 class="card-subtitle mb-2 d-none d-md-block">A. Chen, Y. Guan, P. M. Lenggenhager, J. Maciejko, I. Boettcher, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">A. Chen, Y. Guan, P. M. Lenggenhager, J. Maciejko, I. Boettcher, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
-	<a href="https://arxiv.org/abs/2304.03273" target="_blank">
+	<a href="https://doi.org/10.48550/arXiv.2304.03273" target="_blank">
 		arXiv:2304.03273 (2023)
 	</a>
 	<div class="d-none d-sm-inline">
-		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Uploaded</div> 12 Apr 2023
+		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Published</div> 12 Apr 2023
 	</div>
 </h6>
 
@@ -166,11 +166,11 @@ Using real-space topological markers as well as Chern numbers defined in the hig
 				<h6 class="card-subtitle mb-2 d-none d-md-block">A. Chen, Y. Guan, P. M. Lenggenhager, J. Maciejko, I. Boettcher, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2 d-md-none">A. Chen, Y. Guan, P. M. Lenggenhager, J. Maciejko, I. Boettcher, and T. Bzdušek</h6>
 <h6 class="card-subtitle mb-2">
-	<a href="https://arxiv.org/abs/2304.03273" target="_blank">
+	<a href="https://doi.org/10.48550/arXiv.2304.03273" target="_blank">
 		arXiv:2304.03273 (2023)
 	</a>
 	<div class="d-none d-sm-inline">
-		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Uploaded</div> 12 Apr 2023
+		&nbsp;&ndash;&nbsp; <div class="d-none d-md-inline">Published</div> 12 Apr 2023
 	</div>
 </h6>
 
